Fix announcement message overlapping issues

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -193,14 +193,14 @@ h1
     @media screen and (max-width: $break-small)
       padding: 0
 
-  #product .content .wrapper
-    padding: 0
+#product .content .wrapper
+  padding: 0
 
-  #cart .content .wrapper
-    padding: 0 50px
+#cart .content .wrapper
+  padding: 0 50px
 
-  #contact .content .wrapper
-    padding: 0 50px
+#contact .content .wrapper
+  padding: 0 50px
 
 .custom-content
   font-size: 20px
@@ -469,10 +469,10 @@ footer
   left: 0
   line-height: 26px
   padding: 14px 20px
-  position: absolute
+  position: relative
   top: 0
   width: 100%
-  z-index: 20
+  z-index: 9
 
   .flash-message-text
     text-align: center
